# ckanext-feedback

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
ckanext/feedback/: admin.py  config.py  helpers.py  model.py  plugin.py  views.py
ckanext/feedback/assets/: feedback.js  webassets.yml
ckanext/feedback/i18n/: ckanext-feedback.pot
ckanext/feedback/i18n/fr/LC_MESSAGES/: ckanext-feedback.mo  ckanext-feedback.po
ckanext/feedback/migration/feedback/: alembic.ini  env.py
ckanext/feedback/migration/feedback/versions/: 001_c3d4e5f6a7b8_create_tables.py
ckanext/feedback/templates/admin/: base.html  feedback.html
ckanext/feedback/templates/feedback/snippets/: feedback_form.html  rating_widget.html
