[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-feedback"
version = "0.1.0"
description = "Dataset feedback and star rating extension for CKAN"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.entry-points."ckan.plugins"]
feedback = "ckanext.feedback.plugin:FeedbackPlugin"

[tool.setuptools.packages.find]
include = ["ckanext*"]